2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (main, main_prog): Bugfix: move exit-upon-files
	back, until after evaluating init_scheme_code.

	* scm/translator-property-description.scm (breakAlignOrder): Doco fix.

	* Documentation/user/lilypond-book.itely: Remove @cindex
	without argument.

	* Documentation/user/internals.itely: Remove stray comma after
	@cindex entry.

2002-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/break-substitution.cc (fast_fubstitute_grob_list): use
	realloc()

	* lily/dynamic-engraver.cc (process_music): don't use SCM_UNDEFINED

	* Documentation/user/tutorial.itely: fixes by Graham Percival.

2002-08-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lily-guile.cc (type_check_assignment): if
	internal-type-checking set, abort if we find an unknown property.

	* input/regression/GNUmakefile,input/test/GNUmakefile: be anal
	with typechecks

	* lily/beam.cc: add 'knee to interface

	* input/test/*.ly: remove or update files using deprecated
	properties

	* lily/system.cc (spanner_count): new function

	* lily/break-substitution.cc (fast_fubstitute_grob_list): special
	function for break substitutions on groblists in spanners. By
	reordering the elements of the list, we can skip large parts of
	the list in the break substitution. This brings the complexity of
	Lily back to more-or-less linear in the length of the score.

	Measured speed increase: 20 % (coriolan, without -O2)

	* lily/parse-scm.cc (parse_handler): don't construct a new strport
	for every parsing. This saves a lot of garbage on large files that
	have many # constructs.

	* lily/source-file.cc (init_port): add an SCM port to the
	sourcefile as well. 

	* lily/include/input-file-results.hh: move from
	file-results. Rename Input_file_settings to Input_file_results.

	* flower/ : remove simple-file-storage, mapped-file-storage,
	string-storage. Move source-file, binary-source-file to lily/

	* Documentation/header.html.in: remove FAQ
