@@ -1,5 +1,12 @@
 2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/score-engraver.cc: Uniformise error message.
+
+	* lily/grob-property.cc (internal_set_grob_property,
+	internal_get_grob_property): [!NDEBUG] Remove, use abort instead
+	of assert; we always want this functionality.  Uniformise warning
+	message.
+	
 	* lily/main.cc (main, main_prog): Bugfix: move exit-upon-files
 	back, until after evaluating init_scheme_code.
 
